fixes #97 upgrade maven-javadoc-plugin version