@@ -88,9 +88,8 @@
         <version.h2>1.4.196</version.h2>
         <versions.maven-version>2.4</versions.maven-version>
         <version.oracle>11.2.0.3</version.oracle>
-        <version.maven-javadoc>3.1.0</version.maven-javadoc>
         <version.javadoc-packagelist-plugin>1.0.0</version.javadoc-packagelist-plugin>
-        <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
+        <version.maven-javadoc>3.1.0</version.maven-javadoc>
     </properties>
 
     <modules>
